fix alignment and video frame

--- a/styles/main.css
+++ b/styles/main.css
@@ -271,6 +271,7 @@ a {
 
 .video-container iframe {
   padding-top: 40px;
+  padding-bottom: 40px;
   display: inline-block;
 }
 
